--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 base_url= "https://f5.maatt.fr"
-title= "Broadcast 3,4 Wiki"
+title= "SRHS Broadcast Wiki"
 compile_sass= true
 build_search_index= true
 
